--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "wondrous-tails-simulator"
 version = "0.1.0"
 edition = "2021"
+authors = ["JJ Brown"]
+description = "A WASM-based simulator for Wondrous Tails"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+yew = { version = "0.20.0", features = ["csr"] }
