Added logging. And now I can click stickers again!

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ default-run = "webapp"
 
 [dependencies]
 yew = { version = "0.20.0", features = ["csr"] }
+wasm-logger = "0.2.0"
+log = "0.4.6"
 
 [[bin]]
 name = "webapp"
