--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ yew = { version = "0.20.0", features = ["csr"] }
 wasm-logger = "0.2.0"
 log = "0.4.6"
 
+[dev-dependencies]
+rand = "0.8.5"
+
 [[bin]]
 name = "webapp"
 
@@ -21,5 +24,10 @@ name = "webapp"
 name = "measure_9_sticker_boards"
 required-features = ["measure_9_sticker_boards"]
 
+[[bin]]
+name = "precompute_data"
+required-features = ["precompute_data"]
+
 [features]
 measure_9_sticker_boards = []
+precompute_data = []
